# offsets-db-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  activate.sh  alembic.ini  codecov.yml  docker-compose.yml  entrypoint.sh  environment-dev.yml  environment.yml  fly.prod.toml  fly.staging.toml  gunicorn_config.py  notes.md  pyproject.toml  release.sh  requirements.txt  update_database.py
.github/: labeler.yml
.github/actions/setup/: action.yml
.github/workflows/: fly.yml  label-prs.yaml  linting.yaml  locust-benchmarks.yaml  main.yaml  populate-db.yml  prefect-flows.yaml  update-db.yaml
carbonplan_offsets_db/: __init__.py  app_metadata.py  database.py  logging.py  main.py  models.py  query_helpers.py  schemas.py  settings.py  tasks.py
carbonplan_offsets_db/routers/: charts.py  clips.py  credits.py  files.py  projects.py  stats.py
load-testing/: locustfile.py
migrations/: env.py  script.py.mako
migrations/versions/: 00696c89404b_add_valid_records_url_to_db_model.py  0419f13d9065_create_project_id_indexes.py  08de868a61b6_reset_migrations_and_add_new_fields_to_.py  0a57cc90c01a_use_postgres_bigint.py  1bfa52311eaf_rename_registry_id_to_project_id.py  216d52435022_ensure_project_id_is_unique.py  2e536c835001_add_is_arb_to_the_project_table.py  361d093e626c_add_chunksize_to_file.py  3ad282e2da77_make_transaction_serial_number_unique.py  4546765e96c9_add_retired_and_issued_totals_to_the_.py  46b4797494ca_remove_b_tree_indexes.py  48c481cfb3f7_add_transaction_url_to_credit.py  521f1619112c_add_protocol_unassigned.py  521f1619112c_add_protocol_unassigned_and_double_precision.py  5ca4ae602807_use_postgres_bigint.py  662a96b9d816_clip_and_project_join_table.py  663c273be46f_add_project_table.py  6c3e6ac9445e_add_projectstats_and_creditsstats_to_.py  6c863cafdf94_add_beneficiary_data_to_credit_model.py  7880172b664a_change_quantity_issued_retired_to_float.py  7cd293968e05_allow_name_to_be_nullable.py  8738137f943c_reset_database.py  895a2d11e837_reset_migrations_and_add_new_fields_to_.py  89f5469d1d5b_add_total_transactions.py  8b97dd22cafd_rename_credit_transaction_fields_to_.py  8dafad959469_add_transaction_serial_number_to_the_.py  8e86f38862bf_add_file_table.py  8ed0e389ff06_reset_migrations_and_add_new_fields_to_.py  8fe1a56afe4f_alembic_history_purge_and_.py  92b239179f40_refactor_credit_and_project.py  94e3b0854cad_reset_migrations_and_add_indexes.py  a1b2c3d4e5f6_change_issued_retired_quantity_to_double.py  aa61bc8eaf51_rename_type_to_project_type.py  af213f65d057_add_bi_directional_relationships_.py  b416aeec829c_reset_revisions.py  b929202eddf6_add_category_to_file_model.py  c05cd27127ae_add_retirement_beneficiary_harmonized.py  cd307c691d94_reset_migrations.py  d1848d5c8216_baseline.py  d2bc99dedcf6_make_both_category_and_protocol_a_list_.py  (+9 more)
offsets_db_api/: app_metadata.py  cache.py  common.py  database.py  geo.py  logging.py  main.py  models.py  query_helpers.py  schemas.py  security.py  settings.py  sql_helpers.py  tasks.py
offsets_db_api/routers/: charts.py  clips.py  credits.py  files.py  health.py  projects.py
scripts/: db_diagnostics.py  update_database.py
tests/: conftest.py  test_charts.py  test_clips.py  test_common.py  test_credits.py  test_files.py  test_health.py  test_projects.py  test_query_helpers.py  test_sql_helpers.py  test_stats.py  test_tasks.py
