[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
    ]
    description = "fastAPI for offsets Database"
    license = { text = "MIT" }
    name = "offsets-db-api"
    readme = "README.md"
    requires-python = ">=3.10"

    dynamic = ["version"]

    dependencies = [

        "aiofiles>=23.2",
        "alembic==1.14",
        "apscheduler>=3.10.1",
        "fastapi-cache2 @ git+https://github.com/andersy005/fastapi-cache@pydantic-v2-compat", # for pydantic v2 compatilibity
        "fastapi==0.115.5",
        "fastparquet",
        "gunicorn",
        "httpx",
        "offsets-db-data>=2024.11",
        "pandas>=1.5.3",
        "psycopg2-binary==2.9.10",
        "pydantic-settings>=2.1",
        "pydantic>=2.5",
        "s3fs>=2023",
        "sqlmodel==0.0.22",
        "ujson",
        "universal_pathlib",
        "uvicorn",
        "watchdog>=3.0",

    ]
[project.optional-dependencies]
    dev = []

[project.urls]
    repository = "https://github.com/carbonplan/offsets-db-api"

[tool.setuptools.packages.find]
    include = ["offsets_db_api*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["gunicorn_config.py", "tests/*"]

[tool.ruff]
    builtins       = ["ellipsis"]
    line-length    = 100
    target-version = "py310"
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
    ]

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = [
        # Pyflakes
        "F",
        # Pycodestyle
        "E",
        "W",
        # isort
        "I",
        # Pyupgrade
        "UP",
    ]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = ["offsets_db_api"]

[tool.ruff.format]
    quote-style = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts              = "--cov=./ --cov-report=xml  --cov-report=term-missing --verbose"
    console_output_style = "count"
